--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "gyazo-api-ts": "0.1.4",
+    "jotai": "2.11.3",
+    "jotai-location": "0.5.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
